adding alias for pbcopy

--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ export PATH=$PATH:/usr/local/go/bin:$GOBIN
 export GEM_HOME="$HOME/gems"
 export PATH="$HOME/gems/bin:$PATH"
 
+alias pbcopy="xclip -sel clip"
+
 alias vim="nvim"
 alias vi="nvim"
 alias oldvim="vim"
