--- a/.env
+++ b/.env
@@ -14,9 +14,18 @@ export PATH="$HOME/gems/bin:$PATH"
 
 alias pbcopy="xclip -sel clip"
 
+export GOPATH=~/go
+export GOBIN=$GOPATH/bin
+export PATH=$PATH:/usr/local/go/bin:$GOBIN
+
 alias vim="nvim"
 alias vi="nvim"
 alias oldvim="vim"
+
+[ -z "$TMUX" ] && export TERM=xterm-256color
+if [ -f ~/.git-completion.bash ]; then
+  . ~/.git-completion.bash
+fi
 
 dpull() {
 	for d in */ ; do
