--- a/.env.darwin
+++ b/.env.darwin
@@ -21,14 +21,4 @@ if [ "$TERM" != "linux" ]; then
     install_powerline_precmd
 fi
 
-export GOPATH=~/go
-export GOBIN=$GOPATH/bin
-export PATH=$PATH:/usr/local/go/bin:$GOBIN
-
-alias vim="nvim"
-alias vi="nvim"
-alias oldvim="vim"
-
-[ -z "$TMUX" ] && export TERM=xterm-256color\
-
-echo "Updated Environment"
+zsh ~/.env.shared
