got the env files to reload after update

--- a/.env.darwin
+++ b/.env.darwin
@@ -1,3 +1,5 @@
+#PROMPT='%2~ %# '
+
 # Load Git completion
 zstyle ':completion:*:*:git:*' script ~/.zsh/git-completion.bash
 fpath=(~/.zsh $fpath)
@@ -5,7 +7,8 @@ fpath=(~/.zsh $fpath)
 autoload -Uz compinit && compinit
 
 function powerline_precmd() {
-    PS1="$($GOPATH/bin/powerline-go -error $? -shell zsh)"
+    # using customization code - https://github.com/justjanne/powerline-go#customization
+    PROMPT="$($GOPATH/bin/powerline-go -error $? -modules "venv,ssh,cwd,perms,git,hg,jobs,exit,root" -cwd-mode dironly -shell zsh)"
 }
 
 function install_powerline_precmd() {
