Updated the environment installer to diff files
This is now setup to accept a filename property when copying over
environment specific files so that the individual environment can
be specified. I will be updating this in the next commit to be part
of the flags in env.sh so that only one execution is required with
specific flags for updating the env repo vs installing / updating
a local environment from the repo.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,6 +66,11 @@ set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'maxrodrigo/tmux-nordvpn'
 #set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+ 
+set -g @continuum-restore 'on'
+
 set -g status-right 'on|#{online_status} vpn|#{nordvpn_status_color}#{nordvpn_status} (#{nordvpn_country})'
 #run-shell ~/src/nordvpn_tmux/nordvpn.tmux
 
