updated tmux config for copy paste between panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,8 @@ bind r source-file ~/.tmux.conf |; display "Reloaded!"
 # do nothing with it
 bind C-a send-prefix
 
+setw -g mode-keys vi
+
 # change the key combinations for vertical (|) and horizontal (-) splitting to make more sense
 bind | split-window -h
 bind - split-window -v
@@ -39,6 +41,17 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+#-------------------------------------------------------#
+#Pane copy/pasting
+#-------------------------------------------------------#
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
+#-------------------------------------------------------#
 
 # set up the mouse mode to be enabled
 set -g mouse off
