changed the tmux theme to one that isn't powerline so the icons dont get weird

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ set -g default-terminal "screen-256color"
 # Setup tmux theme
 #source-file "${HOME}/.tmux-themepack/powerline/default/cyan.tmuxtheme"
 set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/double/cyan'
+set -g @themepack 'basic'
 
 # Setup git status on tmux
 #set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
