--- a/.env.shared
+++ b/.env.shared
@@ -7,7 +7,9 @@ alias vi="nvim"
 alias oldvim="vim"
 
 p() {
-	ping 8.8.8.8
+	#ping 8.8.8.8
+	ping 8.8.8.8 | while read pong; do echo "$(date): $pong"; done | grep timeout
+
 }
 
 [ -z "$TMUX" ] && export TERM=xterm-256color
