--- a/.env.shared
+++ b/.env.shared
@@ -1,6 +1,6 @@
 export GOPATH=~/go
 export GOBIN=$GOPATH/bin
-export PATH=$PATH:/usr/local/go/bin:$GOBIN
+export PATH=$PATH:/usr/local/go/bin:$GOBIN:~/bin
 
 alias vim="nvim"
 alias vi="nvim"
