updated lint to do recursive go.mod search and fixed missing ping grep check

--- a/.env.shared
+++ b/.env.shared
@@ -8,7 +8,7 @@ alias oldvim="vim"
 
 p() {
 	#ping 8.8.8.8
-	ping 8.8.8.8 | while read pong; do echo "$(date): $pong"; done | grep timeout
+	ping 8.8.8.8 | while read pong; do echo "$(date): $pong"; done | grep -e timeout -e Unreachable
 
 }
 
