--- a/.env.shared
+++ b/.env.shared
@@ -1,5 +1,5 @@
-export GOPATH=~/go
-export GOBIN=$GOPATH/bin
+#export GOPATH=~/go
+#export GOBIN=$GOPATH/bin
 export PATH=$PATH:/usr/local/go/bin:$GOBIN:~/bin
 
 alias vim="nvim"
@@ -13,7 +13,7 @@ p() {
 }
 
 to() {
-	cd $GOPATH/src/github.com/$1
+	cd ~/src/$1
 }
 
 [ -z "$TMUX" ] && export TERM=xterm-256color
