--- a/.env.shared
+++ b/.env.shared
@@ -1,6 +1,4 @@
-#export GOPATH=~/go
-#export GOBIN=$GOPATH/bin
-export PATH=$PATH:/usr/local/go/bin:~/go/bin:~/bin
+export PATH=$PATH:/usr/local/go/bin:$(go env GOPATH)/bin:~/bin
 
 alias vim="nvim"
 alias vi="nvim"
