--- a/.env.darwin
+++ b/.env.darwin
@@ -1,3 +1,5 @@
+#!/bin/bash
+
 #PROMPT='%2~ %# '
 
 # Load Git completion
@@ -6,23 +8,23 @@ fpath=(~/.zsh $fpath)
 
 autoload -Uz compinit && compinit
 
-function powerline_precmd() {
-    # using customization code - https://github.com/justjanne/powerline-go#customization
-    PROMPT="$($GOPATH/bin/powerline-go -error $? -modules "venv,ssh,cwd,perms,git,hg,jobs,exit,root" -cwd-mode dironly -shell zsh)"
-}
+# function powerline_precmd() {
+#     # using customization code - https://github.com/justjanne/powerline-go#customization
+#     PROMPT="$($GOPATH/bin/powerline-go -error $? -modules "venv,ssh,cwd,perms,git,hg,jobs,exit,root" -cwd-mode dironly -shell zsh)"
+# }
 
-function install_powerline_precmd() {
-  for s in "${precmd_functions[@]}"; do
-    if [ "$s" = "powerline_precmd" ]; then
-      return
-    fi
-  done
-  precmd_functions+=(powerline_precmd)
-}
+# function install_powerline_precmd() {
+#   for s in "${precmd_functions[@]}"; do
+#     if [ "$s" = "powerline_precmd" ]; then
+#       return
+#     fi
+#   done
+#   precmd_functions+=(powerline_precmd)
+# }
 
-if [ "$TERM" != "linux" ]; then
-    install_powerline_precmd
-fi
+# if [ "$TERM" != "linux" ]; then
+#     install_powerline_precmd
+# fi
 
 re() {
 	source ~/.zshrc
