--- a/.env.shared
+++ b/.env.shared
@@ -1,4 +1,8 @@
-export PATH=$PATH:/usr/local/go/bin:$(go env GOPATH)/bin:~/bin
+#!/bin/bash
+GOPATH=$(go env GOPATH)
+
+export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin:~/bin
+export PS1="\u | \[\033[32m\]\W\[\033[33m\]\$(git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/ (\1)/')\[\033[00m\] $ "
 
 alias vim="nvim"
 alias vi="nvim"
@@ -14,4 +18,4 @@ to() {
 	cd ~/src/$1
 }
 
-[ -z "$TMUX" ] && export TERM=xterm-256color
+# [ -z "$TMUX" ] && export TERM=xterm-256color
