fixing bashrc update section of script

--- a/.env.shared
+++ b/.env.shared
@@ -2,7 +2,8 @@
 
 export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin:~/bin
 
-GOPATH=$(go env GOPATH)
+export GOPATH=$(go env GOPATH)
+export GOBIN=$GOPATH/bin
 
 alias vim="nvim"
 alias vi="nvim"
