fixing another bug

--- a/.env.shared
+++ b/.env.shared
@@ -1,9 +1,13 @@
 #!/bin/bash
 
-export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin:~/bin
+# Add Go to the PATH
+export PATH=$PATH:/usr/local/go/bin
 
 export GOPATH=$(go env GOPATH)
 export GOBIN=$GOPATH/bin
+
+# Add GOBIN, and user bin to path
+export PATH=$PATH:$GOPATH/bin:~/bin
 
 alias vim="nvim"
 alias vi="nvim"
