--- a/.env.shared
+++ b/.env.shared
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Add Go to the PATH
-export PATH=$PATH:/usr/local/go/bin
+export PATH=/usr/local/go/bin:$PATH
 
 export GOPATH=$(go env GOPATH)
 export GOBIN=$GOPATH/bin
