Fixing path issues

--- a/.env.shared
+++ b/.env.shared
@@ -3,11 +3,11 @@
 # Add Go to the PATH
 export PATH=/usr/local/go/bin:$PATH
 
-export GOPATH=$(go env GOPATH)
+export GOPATH=$HOME/go
 export GOBIN=$GOPATH/bin
 
 # Add GOBIN, and user bin to path
-export PATH=$PATH:$GOPATH/bin:~/bin
+export PATH=$PATH:$GOBIN:~/bin
 
 alias vim="nvim"
 alias vi="nvim"
