--- a/.env.darwin
+++ b/.env.darwin
@@ -1,5 +1,8 @@
 #!/bin/bash
 
+export PATH=/opt/homebrew/bin/:$PATH
+
+
 # Load Git completion
 zstyle ':completion:*:*:git:*' script ~/.zsh/git-completion.bash
 fpath=(~/.zsh $fpath)
