Cleaning up some scripts

--- a/.env.darwin
+++ b/.env.darwin
@@ -132,7 +132,7 @@ _hugo()
         # File extension filtering
         local filteringCmd
         filteringCmd='_files'
-        for filter in ${completions[@]}; do
+        for filter in "${completions[@]}"; do
             if [ ${filter[1]} != '*' ]; then
                 # zsh requires a glob pattern to do file filtering
                 filter="\*.$filter"
@@ -191,7 +191,7 @@ _hugo()
     fi
 }
 
-# don't run the completion function when being source-ed or eval-ed
-if [ "$funcstack[1]" = "_hugo" ]; then
-	_hugo
-fi
+# # don't run the completion function when being source-ed or eval-ed
+# if [ "$funcstack[1]" = "_hugo" ]; then
+# 	_hugo
+# fi
