--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Setting the prefix from C-b to C-a
-set -g prefix C-a
+# set -g prefix Ctrl-a
 
 # unbind the C-b key
-unbind C-b
+# unbind C-b
 
 # removing tmux delay
 set -sg escape-time 1
