Adding helper function for initializing gh-pages branches

--- a/.env.shared
+++ b/.env.shared
@@ -22,3 +22,20 @@ p() {
 to() {
 	cd ~/src/$1
 }
+
+initghpages() {
+	git checkout --orphan gh-pages
+	git rm -rf .
+	echo "BLANK" > README.md
+	echo ".DS_Store" > .gitignore
+
+	if [[ "$1" != "" ]]
+	then
+		echo "$1" > CNAME
+	fi
+	
+	git add .
+	git commit -m "Initial commit"
+	git push origin gh-pages
+	git checkout main
+}
