Adding copilot to VIM and setting default shell to zsh

--- a/.env.shared
+++ b/.env.shared
@@ -6,6 +6,11 @@ export PATH=/usr/local/go/bin:$PATH
 export GOPATH=$HOME/go
 export GOBIN=$GOPATH/bin
 
+if which zsh && echo $SHELL != $(which zsh); then
+	chsh -s $(which zsh)
+	export SHELL=$(which zsh)
+fi
+
 # Add GOBIN, and user bin to path
 export PATH=$PATH:$GOBIN:~/bin
 
