Updating env scripts to properly handle git completion for zsh

--- a/.env.shared
+++ b/.env.shared
@@ -1,15 +1,15 @@
 #!/bin/bash
 
+# auto-completion
+if [ -f /opt/local/etc/profile.d/bash_completion.sh ]; then
+  . /opt/local/etc/profile.d/bash_completion.sh
+fi
+
 # Add Go to the PATH
 export PATH=/usr/local/go/bin:$PATH
 
 export GOPATH=$HOME/go
 export GOBIN=$GOPATH/bin
-
-if which zsh && echo $SHELL != $(which zsh); then
-	chsh -s $(which zsh)
-	export SHELL=$(which zsh)
-fi
 
 # Add GOBIN, and user bin to path
 export PATH=$PATH:$GOBIN:~/bin
