Updating nvim config

--- a/.env.shared
+++ b/.env.shared
@@ -8,6 +8,7 @@ fi
 export GOPATH=$HOME/go
 export GOBIN=$GOPATH/bin
 
+export PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin":$PATH
 # Add GOBIN, and user bin to path
 export PATH=$PATH:$GOBIN:~/bin
 
