--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,13 @@
 {
 	"languageserver": {
+"golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.work", "go.mod", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["go"],
+      "initializationOptions": {
+        "usePlaceholders": true
+      }
+    },
 		"clangd": {
 			"command": "clangd",
 			"args": ["--background-index"],
