Fixing neovim install on macos

--- a/.env.shared
+++ b/.env.shared
@@ -10,7 +10,7 @@ export GOBIN=$GOPATH/bin
 
 export PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin":$PATH
 # Add GOBIN, and user bin to path
-export PATH=$PATH:$GOBIN:~/bin:$HOME/nvim-linux64/bin
+export PATH=$PATH:$GOBIN:~/bin
 
 alias vim="nvim"
 alias vi="nvim"
