--- a/.env.darwin
+++ b/.env.darwin
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-export PATH=/opt/homebrew/bin/:$PATH
+export PATH=$HOME/nvim-macos/bin:/opt/homebrew/bin/:$PATH
 
 
 # Load Git completion
