updating to use pinentry in the terminal

--- a/.env.shared
+++ b/.env.shared
@@ -42,3 +42,6 @@ initghpages() {
 	git push origin gh-pages
 	git checkout main
 }
+
+export GPG_TTY=$(tty)
+gpg-connect-agent updatestartuptty /bye >/dev/null
