--- a/.env.shared
+++ b/.env.shared
@@ -16,6 +16,14 @@ alias vim="nvim"
 alias vi="nvim"
 alias oldvim="vim"
 
+git config --global alias.co checkout
+git config --global alias.br branch
+git config --global alias.ci 'commit -am'
+git config --global alias.st status
+git config --global alias.last 'log -1 HEAD'
+git config --global alias.rst 'reset HEAD --'
+git config --global alias.psh 'submodule foreach git push origin'
+
 p() {
 	#ping 8.8.8.8
 	ping 8.8.8.8 | while read pong; do echo "$(date): $pong"; done | grep -e timeout -e Unreachable
