--- a/.env.shared
+++ b/.env.shared
@@ -15,6 +15,7 @@ export PATH=$PATH:$GOBIN:~/bin
 alias vim="nvim"
 alias vi="nvim"
 alias oldvim="vim"
+alias python="python3"
 
 git config --global alias.co checkout
 git config --global alias.br branch
@@ -23,6 +24,7 @@ git config --global alias.st status
 git config --global alias.last 'log -1 HEAD'
 git config --global alias.rst 'reset HEAD --'
 git config --global alias.psh 'submodule foreach git push origin'
+git config --global alias.br 'branch --format="%(HEAD) %(color:yellow)%(refname:short)%(color:reset) - %(contents:subject) %(color:green)(%(committerdate:relative)) [%(authorname)]" --sort=-committerdate'
 
 p() {
 	#ping 8.8.8.8
@@ -51,5 +53,5 @@ initghpages() {
 	git checkout main
 }
 
-export GPG_TTY=$(tty)
-gpg-connect-agent updatestartuptty /bye >/dev/null
+#export GPG_TTY=$(tty)
+#gpg-connect-agent updatestartuptty /bye >/dev/null
