--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: benjivesterby
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_PAT }}
       -
         name: Build and push
@@ -34,5 +34,5 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/benjivesterby/env:latest
-          cache-from: type=registry,ref=ghcr.io/benjivesterby/env:latest
-          cache-to: type=inline:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
