--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@
 #     instead, override settings in ~/.tmux.conf.local, see README.md
 
 
+set-option -g default-shell /bin/zsh
 # -- general -------------------------------------------------------------------
 
 # Smart pane switching with awareness of Vim splits.
