--- a/.env.shared
+++ b/.env.shared
@@ -16,6 +16,7 @@ alias vim="nvim"
 alias vi="nvim"
 alias oldvim="vim"
 alias python="python3"
+alias ssh="ssh -A"
 
 git config --global alias.co checkout
 git config --global alias.br branch
