feat: add support for agent forwarding and git signing

--- a/.env.shared
+++ b/.env.shared
@@ -56,3 +56,20 @@ initghpages() {
 
 #export GPG_TTY=$(tty)
 #gpg-connect-agent updatestartuptty /bye >/dev/null
+
+ogsock="$HOME/.1password/agent.sock"
+# Check if SSH agent is available
+if [ -n "$SSH_AUTH_SOCK" ]; then
+	# Remove the current socket and create a symlink in it's place pointing
+	# to the path defined by the SSH_AUTH_SOCK environment variable
+	if [ -e "$ogsock" ]; then
+		rm "$ogsock"
+	fi
+	ln -s "$SSH_AUTH_SOCK" "$ogsock"
+else
+	# If the SSH_AUTH_SOCK environment variable is not set, check if the
+	# symlink exists and remove it
+	if [ -e "$ogsock" ]; then
+		rm "$ogsock"
+	fi
+fi
