feat: some env maint

--- a/.env.shared
+++ b/.env.shared
@@ -10,7 +10,7 @@ export GOBIN=$GOPATH/bin
 
 export PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin":$PATH
 # Add GOBIN, and user bin to path
-export PATH=$PATH:$GOBIN:~/bin
+export PATH=$PATH:$GOBIN:~/bin:$HOME/nvim
 
 alias vim="nvim"
 alias vi="nvim"
@@ -53,7 +53,3 @@ initghpages() {
 	git push origin gh-pages
 	git checkout main
 }
-
-#export GPG_TTY=$(tty)
-#gpg-connect-agent updatestartuptty /bye >/dev/null
-
