feat: adding the uncommitted text to the terminal open

--- a/.env.shared
+++ b/.env.shared
@@ -53,3 +53,11 @@ initghpages() {
 	git push origin gh-pages
 	git checkout main
 }
+
+if [ -f $HOME/src/uncommitted ]; then
+	echo "-----------------------------------------------------------"
+	echo "You have uncommitted changes in the following directories:"
+	echo "-----------------------------------------------------------"
+	cat $HOME/src/uncommitted
+	echo "-----------------------------------------------------------"
+fi
