--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,8 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 set -g default-terminal "screen-256color"
 if 'infocmp -x tmux-256color > /dev/null 2>&1' 'set -g default-terminal "tmux-256color"'
 
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
