feat: adding the tsh command for remote tmux shells

--- a/.env.shared
+++ b/.env.shared
@@ -54,6 +54,10 @@ initghpages() {
 	git checkout main
 }
 
+tsh() {
+	ssh $1 -t tmux attach-session
+}
+
 if [ -f $HOME/src/uncommitted ]; then
 	echo "-----------------------------------------------------------"
 	echo "You have uncommitted changes in the following directories:"
