feat: add tsh command

--- a/.env.shared
+++ b/.env.shared
@@ -54,8 +54,9 @@ initghpages() {
 	git checkout main
 }
 
+#eval $(ssh-agent -s)
 tsh() {
-	ssh $1 -t tmux attach-session
+	ssh -A $1 -t tmux attach-session
 }
 
 if [ -f $HOME/src/uncommitted ]; then
