--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ repos:
         language: python
         entry: detect-secrets-hook
         args: ['--baseline', '.secrets.baseline']
--   repo: https://github.com/koalaman/shellcheck-precommit
-    rev: v0.8.0
-    hooks:
-    -   id: shellcheck
+  #-   repo: https://github.com/koalaman/shellcheck-precommit
+  #    rev: v0.8.0
+  #    hooks:
+  #    -   id: shellcheck
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
