--- a/.env.shared
+++ b/.env.shared
@@ -16,7 +16,8 @@ alias vim="nvim"
 alias vi="nvim"
 alias oldvim="vim"
 alias python="python3"
-alias ssh="ssh -A"
+#alias ssh="ssh -A"
+alias nix="nix --extra-experimental-features flakes --extra-experimental-features nix-command"
 
 git config --global alias.co checkout
 git config --global alias.br branch
